--- a/Frontend/einventorymanager/app/globals.css
+++ b/Frontend/einventorymanager/app/globals.css
@@ -1,6 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
  
 @layer base {
   :root {
